fix active chip color on dark mode

--- a/src/components/Elements/ChipsSet/chipset.css
+++ b/src/components/Elements/ChipsSet/chipset.css
@@ -46,4 +46,5 @@
 }
 .chipsSet.alternative-color .chip.active {
   background-color: var(--card-active-action-button-background);
+  color: var(--card-active-action-button-color);
 }
